--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "chalk": "1.1.3",
+    "chart.js": "^2.9.3",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "fs-extra": "3.0.1",
@@ -16,6 +17,7 @@
     "raf": "3.4.0",
     "react": "^16.4.2",
     "react-bootstrap": "^1.0.0-beta.5",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
@@ -96,7 +98,7 @@
     "file-loader": "1.1.5",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.13.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "react-dev-utils": "^5.0.1",
